# hello-rag

./: .gitignore  AGENTS.md  LICENSE  README.md  debug_regex.py  debug_regex_issue.py  debug_splitter.py  demo_semantic_algorithm.py  pyproject.toml  requirements.txt  test_edge_cases.py  test_extreme_case.py  test_final_validation.py  test_recursive_logic.py  test_semantic_splitter.py  test_separator_preservation.py
evaluation/: __init__.py
generation/: __init__.py
retrieval/: __init__.py
tests/: __init__.py  test_simple.py
text_spliter/: README.md  simple.py
